--- a/CarbonMaterials/Resource1.resx
+++ b/CarbonMaterials/Resource1.resx
@@ -118,7 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="CementConstituents" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CementConstituents.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="FreightCarbonCoefficients" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\freightcarboncoefficients.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="ICEv3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\ICEv3.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
